using UnityEngine;

public static class AnimHashes
{
    public static readonly int AttackSpeed = Animator.StringToHash("AttackSpeed");
    public static readonly int AttackIndex = Animator.StringToHash("AttackIndex");
    public static readonly int MoveIndex = Animator.StringToHash("MoveIndex");
}
